# synthea-fhir-databricks-pipeline

./: LICENSE  README.md
api/: .gitignore  Makefile  pyproject.toml
api/app/: main.py  routes.py  schema.py  service.py
docs/: pipeline-writeup.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: ConditionsCountChartCard.tsx
frontend/src/services/: syntheaApiService.ts
frontend/src/utils/: transforms.ts  types.ts
